Tue May 21 03:11:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_each): compose HFS file names from
	  UTF8-MAC. [ruby-core:48745] [Bug #7267]

Tue May 21 03:08:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (assert_separately): require envutil in the
	  child process too.

Tue May 21 03:07:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_conv_enc_opts): should infect.

Mon May 20 22:24:45 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#delete_if, Set#keep_if): Avoid blockless call of
	  proc, which is not portable to JRuby.  Replace &method() with
	  faster and simpler literal blocks while at it.

Mon May 20 22:00:31 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/e2mmap.rb: Format of E2MM documentation

Mon May 20 21:41:15 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/extmk.rb: nodoc this file

Mon May 20 20:43:32 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/cmath.rb: Remove duplicate RDoc heading from overview

Mon May 20 20:36:19 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/securerandom.rb: Update position of overview for RDoc

Mon May 20 19:33:55 2013  Benoit Daloze  <eregontp@gmail.com>

	* math.c: improve and fix documentation of sin, tan and log

Mon May 20 19:31:49 2013  Benoit Daloze  <eregontp@gmail.com>

	* lib/logger.rb (Logger::Application): show namespace in documentation

Mon May 20 11:50:12 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/pp.rb: Revert part of r40834 and nodoc PP::ObjectMixin
	  [ruby-core:55068]

Mon May 20 10:40:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/htmlutils.rb (WEBrick::HTMLUtils#escape): replace HTML
	  meta chars even in non-ascii string.  [Bug #8425] [ruby-core:55052]

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils#{_escape,_unescape}):
	  fix %-escape encodings.  [Bug #8425] [ruby-core:55052]

	* lib/webrick/httpservlet/filehandler.rb (set_dir_list): revert r20152