@@ -1,3 +1,9 @@
+Tue May 21 16:25:05 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_profile_dump_on): `count' should be (int) because it 
+	  can be negative number.
+	  And use pointer for `record' (don't copy).
+
 Tue May 21 03:11:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (dir_each): compose HFS file names from
